<resources>
    <string name="app_name">Dashboard</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_or_username">Email or Username</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="pending">Pending Leaves</string>
    <string name="leaves_today">Leaves Today</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="present_employee">Present Employee</string>
    <string name="absent_employee">Absent Employee</string>
    <string name="leaves_today1">Leaves Today</string>
    <string name="pending_employees">Pending Leaves</string>
    <string name="dashboard_home">Home</string>
    <string name="logout">Logout</string>
    <string name="al_jadi_logo">Al Jadi Logo</string>
    <string name="_1">1</string>
    <string name="ali">Ali</string>
    <string name="al_jadi">Al Jadi</string>
    <string name="_10_00am">10:00AM</string>
    <string name="_12_00pm">12:00PM</string>
    <string name="total">total</string>
    <string name="view_btn">View</string>
    <string name="todo">TODO</string>
    <string name="StartEndTime">Start,End Time</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="working_hours">Working Hours</string>
    <string name="salary">Salary</string>
    <string name="leaves">Leaves</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_leaves">Total Leaves</string>
    <string name="pending_leaves">Pending Leaves</string>
    <string name="approved_rejected">Approved / Rejected</string>
    <string name="apply_for_leaves">Apply for Leaves</string>
    <string name="payroll">Payroll</string>
    <string name="payroll_config">Payroll Config</string>
    <string name="mid">/</string>
    <string name="total_working_hours">Total Working Hours</string>
    <string name="today_working_hours">Today Working Hours</string>
    <string name="check_in_check_out">Check-In/Check-out</string>
    <string name="check_in_check_out1">Check-In/Check-out</string>
    <string name="leave_type">Leave Type</string>
    <string name="please_enter_reason_for_leave">Please Write Reason for Leave</string>
    <string name="time_period">Time Period</string>
    <string name="prompt">Select</string>
    <string name="please_select_date">Please Select Date</string>
    <string name="apply">Apply</string>
    <string name="please_select_start_date">Please Select Start Date</string>
    <string name="please_select_end_date">Please Select End Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="dashboard">Dashboard</string>
    <string name="attendance_request">Attendance Request</string>
    <string name="shift_start_time">Shift Start Time</string>
    <string name="e_g_09_00">e.g. 09:00</string>
    <string name="shift_end_time">Shift End Time</string>
    <string name="e_g_18_00">e.g. 18:00</string>
    <string name="date">Date</string>
    <string name="reason">Reason</string>
    <string name="submit">Submit</string>
    <string name="please_write_reason_for_attendance_request">Please Write Reason For Attendance Request</string>
    <string name="please_enter_reason">Please Enter Reason</string>
</resources>