<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    tools:context=".fragments.AttendanceRequestFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshAttendance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="20dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/company_spinner"
                    android:text="@string/company"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/company_spinner"
                    style="@style/spinner_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:drawSelectorOnTop="true"
                    android:gravity="center"
                    android:layoutDirection="ltr"
                    android:padding="10dp"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@+id/shift_start_time"
                    android:text="@string/shift_start_time"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/shift_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/e_g_09_00"
                    android:importantForAutofill="no"
                    tools:ignore="Autofill,LabelFor,TextFields" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@+id/shift_end_time"
                    android:text="@string/shift_end_time"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/shift_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/e_g_18_00"
                    android:importantForAutofill="no"
                    tools:ignore="Autofill,LabelFor,TextFields" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@+id/date"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/please_select_date"
                    android:importantForAutofill="no"
                    tools:ignore="Autofill,LabelFor,TextFields" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@+id/reason"
                    android:text="@string/reason"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/please_enter_reason"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:minHeight="50dp"
                    android:singleLine="false"
                    tools:ignore="Autofill,LabelFor,TextFields" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/attendance_btn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_login"
                    android:text="@string/submit"
                    android:textSize="18sp"
                    tools:ignore="UsingOnClickInXml" />
            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>