<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/main_background"
android:gravity="center"
android:orientation="vertical"
tools:context=".activities.LoginActivity">

<ImageView
    android:id="@+id/imageView"
    android:layout_width="140dp"
    android:layout_height="140dp"
    android:layout_gravity="center"
    app:srcCompat="@drawable/logo2" />

<com.google.android.material.textfield.TextInputLayout
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="340dp"
    android:layout_height="wrap_content"

    android:hint="@string/email_or_username">

    <EditText
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"

        />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:hint="@string/password">

    <EditText
        android:id="@+id/t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
</com.google.android.material.textfield.TextInputLayout>

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/savebtn"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:background="@drawable/button_login"
    android:text="@string/login"
    android:onClick="processLogin"
    android:textSize="20sp"
    tools:ignore="UsingOnClickInXml" />

<TextView
    android:id="@+id/tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:textSize="20sp"
    android:textStyle="bold" />


</androidx.appcompat.widget.LinearLayoutCompat>