<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ApplyForLeaveActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#F1D6E8"
        android:clickable="true"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/spinner1"
                    android:text="@string/leave_type"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner1"
                    style="@style/spinner_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:drawSelectorOnTop="true"
                    android:gravity="center"
                    android:layoutDirection="ltr"
                    android:padding="10dp"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@+id/reasonForLeave_ET"
                    android:text="@string/please_enter_reason_for_leave"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/reasonForLeave_ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:focusable="true"
                    android:minHeight="50dp"
                    tools:ignore="TextFields" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@+id/spinner2"
                    android:text="@string/time_period"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner2"
                    style="@style/spinner_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:drawable/btn_dropdown"
                    android:drawSelectorOnTop="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:spinnerMode="dropdown" />

                <EditText
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/please_select_date"
                    android:visibility="invisible"
                    tools:ignore="Autofill,TextFields" />

                <Spinner
                    android:id="@+id/spinner3"
                    style="@style/spinner_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:gravity="center"
                    android:padding="10dp"
                    android:spinnerMode="dropdown"
                    android:visibility="invisible" />
                <EditText
                    android:id="@+id/datePicker2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/please_select_date"
                    android:visibility="invisible"
                    tools:ignore="Autofill,TextFields" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="2">
                    <EditText
                        android:layout_weight="1"
                        android:id="@+id/datePicker3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/start_date"
                        android:visibility="invisible"
                        android:maxLines="1"
                        tools:ignore="Autofill,TextFields" />
                    <EditText
                        android:layout_weight="1"
                        android:id="@+id/datePicker4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:layout_marginStart="5dp"
                        android:focusableInTouchMode="false"
                        android:maxLines="1"
                        android:hint="@string/end_date"
                        android:visibility="invisible"
                        tools:ignore="Autofill,LabelFor,TextFields" />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/applyForLeaveBtn"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_login"
                    android:layout_marginTop="60dp"
                    android:text="@string/apply"
                    android:layout_gravity="center"
                    android:onClick="applyForLeaveBtn"
                    android:textSize="20sp"
                    tools:ignore="UsingOnClickInXml" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>